# depth-map

./: .gitignore  README.md  annotation_to_depthmap.py  pyproject.toml  requirements.txt
data/SeaDronesSee/Annotations/: instances_val.json
